--- a/webpack-demo/src/style.css
+++ b/webpack-demo/src/style.css
@@ -1,4 +1,8 @@
+body {
+  background: green;
+}
+
 .hello {
-    color: red;
-    background: url('./icon.png');
-  }
+  color: red;
+  background: url("./icon.png");
+}
